wsMessage rebuild, waitingRoom lobbies list, Lobby

--- a/src/app/components/waiting-room/waiting-room.html
+++ b/src/app/components/waiting-room/waiting-room.html
@@ -1,6 +1,6 @@
 <div class="text-center">
     <div class="text-2xl">
-        <p>Welcome, {{ globalStore.getUsername() }}</p>
+        <p>Welcome, {{ globalStore.getPlayer().name }}</p>
         <p>Find a game to join or create a new one.</p>
     </div>
 
